using refresh token

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -40,6 +40,7 @@
                     else
                     {
                         <li><a id="qsLoginBtn" asp-controller="Account" asp-action="Login">Login</a></li>
+                        <li><a id="qsLoginBtnAzure" asp-controller="Account" asp-action="Login_Azure">Login Azure AD</a></li>
                     }
                 </ul>
             </div>
