--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -20,10 +20,10 @@
         <div>
             <img src="@User.Claims.FirstOrDefault(x => x.Type == "picture")?.Value" />
         </div>
-        <div><span>access_token : &nbsp;</span><span>@ViewBag.AccessToken</span></div><br/>
-        <div><span>id_token : &nbsp;</span><span>@ViewBag.IdToken</span></div><br />
-        <div><span>refresh_token : &nbsp;</span><span>@ViewBag.RefreshToken</span></div><br />
-        <div><div><button onclick="refresh_userinfo()">get user info</button></div><span id="userinfo">@ViewBag.UserInfo</span></div><br />
+        <div><span>access_token : </span><span id="access_token">@ViewBag.AccessToken</span></div><br/>
+        <div><span>id_token : </span><span id="id_token">@ViewBag.IdToken</span></div><br />
+        <div><div><button onclick="get_token()">use refresh token</button></div><span>refresh_token : </span><span id="refresh_token">@ViewBag.RefreshToken</span></div><br />
+        <div><div><button onclick="get_userinfo()">get user info</button></div><span id="userinfo">@ViewBag.UserInfo</span></div><br />
 
         <table class="table">
             <thead>
@@ -52,9 +52,18 @@
 </div>
 @section Scripts{
     <script>
-        function refresh_userinfo() {
-            $.getJSON('https://localhost:9999/home/refreshuserinfo', function (data) {
+        function get_userinfo() {
+            $.getJSON('https://localhost:9999/home/getuserinfo', function (data) {
                 $('#userinfo').text(data);
+            });
+        }
+
+        function get_token() {
+            $.getJSON('https://localhost:9999/home/gettoken', function (data) {
+                var json = JSON.parse(data)
+                $('#access_token').text(json.access_token);
+                $('#id_token').text(json.id_token);
+                $('#refresh_token').text(json.refresh_token);
             });
         }
     </script>
